[project]
name = "kklogger"
version = "1.0.4"
requires-python = ">= 3.12"
description = "My logger package."

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
kklogrm   = "kklogger.bin.logrm:logrm"
kklogmail = "kklogger.bin.logmail:logmail"
